# cmakeexamples

./: README.md
helloworld/: CMakeLists.txt  hello_world.cpp
student/: CMakeLists.txt
student/src/: main.cpp
student_lib_share/: CMakeLists.txt
student_lib_share/include/: Student.h
student_lib_share/src/: Student.cpp
student_lib_static/: CMakeLists.txt
tutorial/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
tutorial-2-lib/: CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
tutorial-2-lib/MathFunctions/: MathFunctions.h  mysqrt.cxx
usestudent/: CMakeLists.txt  usestudent.cpp
